# nepal-palika-finder

./: .gitignore  README.md  config.yml  example.py  pyproject.toml
src/nepal_palika_finder/: config.py  data_loader.py  locator.py
